k8s-manifests/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiraya-frontend
  namespace: cet-rduran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hiraya-frontend
  template:
    metadata:
      labels:
        app: hiraya-frontend
    spec:
      containers:
      - name: hiraya-frontend
        image: amihanglobal/hiraya_application:frontend_prod
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hiraya-frontend-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: hiraya-frontend-config
        configMap:
          name: hiraya-frontend-config
      imagePullSecrets:
      - name: dockerhub-image-pull-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiraya-backend
  namespace: cet-rduran
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hiraya-backend
  template:
    metadata:
      labels:
        app: hiraya-backend
    spec:
      containers:
      - name: hiraya-backend
        image: amihanglobal/hiraya_application:backend_prod
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 6
        command: ["/app/scripts/init-backend.sh"]
        resources:
          limits:
            memory: "6Gi"
            cpu: "3000m"
          requests:
            memory: "3Gi"
            cpu: "1500m"
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: dockerhub-image-pull-secret
