k8s-manifests/statefulset.yaml
# statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hiraya-database
  namespace: cet-rduran
spec:
  serviceName: hiraya-database
  replicas: 1
  selector:
    matchLabels:
      app: hiraya-database
  template:
    metadata:
      labels:
        app: hiraya-database
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: hiraya-database
        image: postgres:14-alpine
        readinessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - hiraya-admin
              - -d
              - hiraya-db
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
              - pg_isready
              - -U
              - hiraya-admin
              - -d
              - hiraya-db
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
        resources:
          limits:
            memory: "4Gi"
            cpu: "2000m"
          requests:
            memory: "2Gi"
            cpu: "1000m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: postgres-config
          mountPath: /etc/postgresql/postgresql.conf
          subPath: postgresql.conf
        - name: postgres-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-config
        configMap:
          name: postgres-config
      - name: postgres-initdb
        configMap:
          name: postgres-initdb
      - name: postgres-data
        persistentVolumeClaim:
          claimName: hiraya-database-pvc
      imagePullSecrets:
      - name: dockerhub-image-pull-secret
