k8s-manifests/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiraya-ingress
  namespace: cet-rduran
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "Referrer-Policy: same-origin";
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  rules:
  - host: hiraya.amihan.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: hiraya-frontend
            port:
              number: 80
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: hiraya-backend
            port:
              number: 5000
  tls:
  - hosts:
    - hiraya.amihan.net
    secretName: hiraya-tls
